--- a/application/index/view/client/client-edit.html
+++ b/application/index/view/client/client-edit.html
@@ -21,49 +21,49 @@
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">客户全称</label>
             <div class="layui-input-block">
-                <input type="text" id="client_name" value="{$clientRow.client_name}"  name="client_name" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="client_name" value="{$clientRow.client_name}"  name="client_name" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">负责人</label>
             <div class="layui-input-block">
-                <input type="text" id="person_in_charge" value="{$clientRow.person_in_charge}"  name="person_in_charge" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="person_in_charge" value="{$clientRow.person_in_charge}"  name="person_in_charge" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">地址</label>
             <div class="layui-input-block">
-                <input type="text" id="address" value="{$clientRow.address}"  name="address" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="address" value="{$clientRow.address}"  name="address" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">电话</label>
             <div class="layui-input-block">
-                <input type="text" id="tle" value="{$clientRow.tle}"  name="tle" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="tle" value="{$clientRow.tle}"  name="tle" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">税法</label>
             <div class="layui-input-block">
-                <input type="text" id="taxunm" value="{$clientRow.taxunm}"  name="taxunm" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="taxunm" value="{$clientRow.taxunm}"  name="taxunm" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">开户行</label>
             <div class="layui-input-block">
-                <input type="text" id="opening_bank" value="{$clientRow.opening_bank}"  name="opening_bank" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="opening_bank" value="{$clientRow.opening_bank}"  name="opening_bank" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
         <div class="layui-form-item">
             <label for="employee_code" class="layui-form-label">银行卡号</label>
             <div class="layui-input-block">
-                <input type="text" id="accoun_num" value="{$clientRow.accoun_num}"  name="accoun_num" lay-verify="required" autocomplete="off" class="layui-input" >
+                <input type="text" id="accoun_num" value="{$clientRow.accoun_num}"  name="accoun_num" autocomplete="off" class="layui-input" >
             </div>
         </div>
 
