--- a/application/index/view/material/material.html
+++ b/application/index/view/material/material.html
@@ -16,7 +16,7 @@
 
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
         <button class="layui-btn" onclick="x_admin_show('添加材料','{:url(\'index/Material/materialAdd\')}',500,400)"><i class="layui-icon"></i>添加</button>
-        <!--<span class="x-right" style="line-height:40px">共有数据：88 条</span>-->
+        <span class="x-right" style="line-height:40px">共有数据： {$materialInfoCount} 条</span>
       </xblock>
       <div class="container-wrap">
         <div class="box-1">
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="page">
-        {$materialInfo|raw}
+
       </div>
     </div>
     <script>
