--- a/application/index/view/client/client-add.html
+++ b/application/index/view/client/client-add.html
@@ -68,8 +68,8 @@
             <label class="layui-form-label">客户分类</label>
             <div class="layui-input-block">
                 <select name="client_classify_id" >
-                    <option value="1">分类1</option>
-                    <option value="2">分类2</option>
+                    <option value="1">公司</option>
+                    <option value="2">个人</option>
                 </select>
             </div>
         </div>
