--- a/application/index/view/client/client-edit.html
+++ b/application/index/view/client/client-edit.html
@@ -71,10 +71,10 @@
             <label class="layui-form-label">客户分类</label>
             <div class="layui-input-block">
                 <select name="client_classify_id" >
-                    <option value="{$clientRow.accoun_num}">{$clientRow.accoun_num=1?"分类1":"分类2"}</option>
+                    <option value="{$clientRow.client_classify_id}">{$clientRow.client_classify_id=="1"?"公司":"个人"}</option>
                     <optgroup label="选择分类">
-                        <option value="1">分类1</option>
-                        <option value="2">分类2</option>
+                        <option value="1">公司</option>
+                        <option value="2">个人</option>
                     </optgroup>
                 </select>
             </div>
