修改组件分页

--- a/application/index/view/assembly/assembly-info.html
+++ b/application/index/view/assembly/assembly-info.html
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="page">
-        {$assemblyInfo->render()}
+        {$assemblyInfo|raw}
       </div>
 
     </div>
