在制任务和已制任务

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -203,17 +203,17 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="{:url('index/task/inTask')}">
+                        <a _href="{:url('index/CurrentTask/inTask',['id'=>1])}">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>在制任务</cite>
+                            <cite>在制和已制</cite>
                         </a>
                     </li >
-                    <li>
-                        <a _href="{:url('index/task/alreadyTask')}">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>已制任务</cite>
-                        </a>
-                    </li >
+                    <!--<li>-->
+                        <!--<a _href="{:url('index/task/alreadyTask')}">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>已制任务</cite>-->
+                        <!--</a>-->
+                    <!--</li >-->
                     <li>
                         <a _href="{:url('index/task/classes')}">
                             <i class="iconfont">&#xe6a7;</i>
