完成收费类型

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -158,6 +158,24 @@
                                     <cite>费用类型</cite>
                                 </a>
                             </li >
+                            <li>
+                                <a _href="{:url('index/IncomeType/Info')}">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>收入类型</cite>
+                                </a>
+                            </li >
+                            <li>
+                                <a _href="{:url('index/CostType/costInfo')}">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>账户类型</cite>
+                                </a>
+                            </li >
+                            <li>
+                                <a _href="{:url('index/CostType/costInfo')}">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>库房类型</cite>
+                                </a>
+                            </li >
                         </ul>
                     </li>
                 </ul>
