--- a/application/index/view/order/order_add.html
+++ b/application/index/view/order/order_add.html
@@ -60,9 +60,9 @@
     <!--</div>-->
     <div class="layui-form-item">
       <label for="order_price" class="layui-form-label">订单报价</label>
-      <span style="color: red">*</span>
+
       <div class="layui-input-inline">
-        <input type="text" id="order_price" name="order_price" lay-verify="required" autocomplete="off" class="layui-input" >
+        <input type="text" id="order_price" name="order_price" autocomplete="off" class="layui-input" >
       </div>
     </div>
     <div class="layui-form-item">
