完成费用类型

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -165,13 +165,13 @@
                                 </a>
                             </li >
                             <li>
-                                <a _href="{:url('index/CostType/costInfo')}">
+                                <a _href="{:url('index/AccountType/Info')}">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>账户类型</cite>
                                 </a>
                             </li >
                             <li>
-                                <a _href="{:url('index/CostType/costInfo')}">
+                                <a _href="{:url('index/StoreroomType/Info')}">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>库房类型</cite>
                                 </a>
