--- a/application/index/view/account_type/cost-info.html
+++ b/application/index/view/account_type/cost-info.html
@@ -3,12 +3,12 @@
 <body>
 <div class="x-body">
   <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
-    <legend>收入类型</legend>
+    <legend>账户类型</legend>
   </fieldset>
   <xblock>
     <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
 
-    <button class="layui-btn" onclick="x_admin_show('添加收入类型','{:url(\'index/IncomeType/costAdd\')}',500,500)"><i class="layui-icon"></i>添加</button>
+    <button class="layui-btn" onclick="x_admin_show('添加账户类型','{:url(\'index/AccountType/costAdd\')}',500,500)"><i class="layui-icon"></i>添加</button>
 
   </xblock>
   <div class="layui-row">
@@ -28,7 +28,7 @@
             <td><?php echo "├".str_repeat("─",$info['level']*3)?>{$info.cost_name}</td>
             <td>{$info.cost_content}</td>
             <td class="td-manage" width="50px;">
-              <a title="编辑" onclick="x_admin_show('修改操作','{:url(\'index/IncomeType/costEdit\',[\'id\'=>$info.id])}',500,400)" href="javascript:;">
+              <a title="编辑" onclick="x_admin_show('修改操作','{:url(\'index/AccountType/costEdit\',[\'id\'=>$info.id])}',500,400)" href="javascript:;">
                 <i style="color: green" class="layui-icon"></i>
               </a>
               <a title="删除" onclick="_delete(this,'{$info.id}')" href="javascript:;">
@@ -48,7 +48,7 @@
     /*删除*/
     function _delete(obj,id){
         layer.confirm('确认要删除吗？',function(index){
-            var url = "{:url('/index/Income_Type/delete')}";
+            var url = "{:url('/index/account_type/delete')}";
             var postData ={"id":id};
             $.post(url,postData,function (result) {
                 if(result === 1 ){
