完成费用类型

--- a/application/index/view/storeroom_type/cost-info.html
+++ b/application/index/view/storeroom_type/cost-info.html
@@ -3,12 +3,12 @@
 <body>
 <div class="x-body">
   <fieldset class="layui-elem-field layui-field-title" style="margin-top: 5px;">
-    <legend>账户类型</legend>
+    <legend>库房类型</legend>
   </fieldset>
   <xblock>
     <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
 
-    <button class="layui-btn" onclick="x_admin_show('添加账户类型','{:url(\'index/StoreroomType/costAdd\')}',500,500)"><i class="layui-icon"></i>添加</button>
+    <button class="layui-btn" onclick="x_admin_show('添加库房类型','{:url(\'index/StoreroomType/costAdd\')}',500,500)"><i class="layui-icon"></i>添加</button>
 
   </xblock>
   <div class="layui-row">
