--- a/application/index/view/task/edit_product_task.html
+++ b/application/index/view/task/edit_product_task.html
@@ -50,7 +50,7 @@
     <div class="layui-form-item">
       <label class="layui-form-label"></label>
       <button class="layui-btn" lay-submit lay-filter="addId">
-        增加
+        确认修改
       </button>
     </div>
   </form>
