生产记录新增界面-修改日期

--- a/application/index/view/production_records/add_log.html
+++ b/application/index/view/production_records/add_log.html
@@ -68,7 +68,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">签字日期</label>
             <div class="layui-input-inline" >
-                <input type="text" class="layui-input" name="manege_date" value=" ">
+                <input type="date" class="layui-input" name="manege_date" value=" ">
             </div>
         </div>
         <div class="layui-form-item">
@@ -92,7 +92,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">检验签名日期</label>
             <div class="layui-input-inline" >
-                <input type="text" class="layui-input" name="qc_inspector_date" value=" ">
+                <input type="date" class="layui-input" name="qc_inspector_date" value=" ">
             </div>
         </div>
         <div class="layui-form-item">
@@ -104,7 +104,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">互检人员签字日期</label>
             <div class="layui-input-inline" >
-                <input type="text" class="layui-input" name="other_checker_date" value=" ">
+                <input type="date" class="layui-input" name="other_checker_date" value=" ">
             </div>
         </div>
         <div class="layui-form-item">
