--- a/application/index/view/production_records/add_log.html
+++ b/application/index/view/production_records/add_log.html
@@ -59,18 +59,19 @@
                 </select>
             </div>
         </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">生产管理签字</label>
-            <div class="layui-input-inline" >
-                <input type="text" class="layui-input" name="manege_name" value=" ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">签字日期</label>
-            <div class="layui-input-inline" >
-                <input type="date" class="layui-input" name="manege_date" value=" ">
-            </div>
-        </div>
+        <input type="hidden" name="create_name" value="{$Think.session.user.user_name}">
+        <!--<div class="layui-form-item">-->
+            <!--<label class="layui-form-label">生产管理签字</label>-->
+            <!--<div class="layui-input-inline" >-->
+                <!--<input type="text" class="layui-input" name="manege_name" value=" ">-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="layui-form-item">-->
+            <!--<label class="layui-form-label">签字日期</label>-->
+            <!--<div class="layui-input-inline" >-->
+                <!--<input type="date" class="layui-input" name="manege_date" value=" ">-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="layui-form-item">
             <label class="layui-form-label">合格品数量</label>
             <div class="layui-input-inline" >
@@ -83,30 +84,36 @@
                 <input type="text" class="layui-input" name="quality_grade" value=" ">
             </div>
         </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">检验员</label>
-            <div class="layui-input-inline" >
-                <input type="text" class="layui-input" name="qc_inspector" value=" ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">检验签名日期</label>
-            <div class="layui-input-inline" >
-                <input type="date" class="layui-input" name="qc_inspector_date" value=" ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">互检人员</label>
-            <div class="layui-input-inline" >
-                <input type="text" class="layui-input" name="other_checker" value=" ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">互检人员签字日期</label>
-            <div class="layui-input-inline" >
-                <input type="date" class="layui-input" name="other_checker_date" value=" ">
-            </div>
-        </div>
+        <!--<div class="layui-form-item">-->
+            <!--<label class="layui-form-label">检验员</label>-->
+            <!--<button class="layui-btn" id="jjy">-->
+                <!--点击签名-->
+            <!--</button>-->
+        <!--</div>-->
+        <!--<div class="layui-form-item">-->
+            <!--<label class="layui-form-label">检验员</label>-->
+            <!--<div class="layui-input-inline" >-->
+                <!--<input type="text" class="layui-input" name="qc_inspector" value=" ">-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="layui-form-item">-->
+            <!--<label class="layui-form-label">检验签名日期</label>-->
+            <!--<div class="layui-input-inline" >-->
+                <!--<input type="date" class="layui-input" name="qc_inspector_date" value=" ">-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="layui-form-item">-->
+            <!--<label class="layui-form-label">互检人员</label>-->
+            <!--<div class="layui-input-inline" >-->
+                <!--<input type="text" class="layui-input" name="other_checker" value=" ">-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="layui-form-item">-->
+            <!--<label class="layui-form-label">互检人员签字日期</label>-->
+            <!--<div class="layui-input-inline" >-->
+                <!--<input type="date" class="layui-input" name="other_checker_date" value=" ">-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="layui-form-item">
             <label class="layui-form-label">生产审核</label>
             <div class="layui-input-inline" >
@@ -135,7 +142,7 @@
         //监听提交
         form.on('submit(addId)', function(data){
             //console.log(data);
-            $.post("{:url('index/Assembly/assemblyAdd')}",data.field,function(info){
+            $.post("{:url('index/ProductionRecords/saveLog')}",data.field,function(info){
                 if (info) {
                     layer.alert("添加成功", {icon: 6},function () {
                         window.parent.location.reload();  //刷新父级页面
@@ -151,6 +158,29 @@
             return false;
         });
     });
+    // $(function () {
+    //     $("#jjy").click(function () {
+    //         layer.open({
+    //             type: 1
+    //             ,title: false //不显示标题栏
+    //             ,closeBtn: false
+    //             ,area: '300px;'
+    //             ,shade: 0.8
+    //             ,id: 'LAY_layuipro' //设定一个id，防止重复弹出
+    //             ,btn: ['确认', '取消']
+    //             ,btnAlign: 'c'
+    //             ,moveType: 1 //拖拽模式，0或者1
+    //             ,content: '<div style="padding: 50px; line-height: 22px; background-color: #393D49; color: #fff; font-weight: 300;">请确定你的签名信息！<br>签名:邓素川<br>日期:2018-10-15</div>'
+    //             ,success: function(layero){
+    //                 var btn = layero.find('.layui-layer-btn');
+    //                 btn.find('.layui-layer-btn0').attr({
+    //                     // href: 'http://www.layui.com/'
+    //                     // ,target: '_blank'
+    //                 });
+    //             }
+    //         });
+    //     });
+    // });
 </script>
 </body>
 
