--- a/application/index/view/production_records/index.html
+++ b/application/index/view/production_records/index.html
@@ -17,7 +17,7 @@
     <xblock>
         <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
         <button class="layui-btn" id="addLog" onclick="x_admin_show('添加生产记录','{:url(\'index/ProductionRecords/addLog\',[\'task_id\'=>$task_id])}',500,700)"><i class="layui-icon"></i>添加生产记录</button>
-        <span class="x-right" style="line-height:40px">共{blueprintInfoCount}条 · 共{blueprintInfoCount/25|getInt}页</span>
+        <span class="x-right" style="line-height:40px">共{$productLogCount}条 · 共{$productLogCount/25|getInt}页</span>
     </xblock>
     <div class="container-wrap">
         <div class="box-1">
@@ -28,8 +28,9 @@
                     <!--<div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>-->
                     <!--</th>-->
                     <th>操作</th>
+                    <th>签字</th>
                     <th>生产记录编号</th>
-                    <th>选择员工</th>
+                    <th>员工编号</th>
                     <th>完成数量</th>
                     <th>完成日期</th>
                     <th>任务编号</th>
@@ -53,8 +54,64 @@
                 </thead>
                 <tbody>
                 <tr>
+                    {volist name="$productLog" id="list"}
                     <td class="td-manage">
+                        <a title="修改" onclick="x_admin_show('修改 <span class=\'layui-badge layui-bg-blue\'>{$list.log_id}</span> 生产记录','{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$list.log_id])}')" href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
+                        <a title="删除" onclick="delete_(this,'{$list.log_id}')" href="javascript:void(0);" >
+                            <i  style="color:red;" class="layui-icon"></i>
+                        </a>
                     </td>
+                    <td class="td-manage">
+                        {if $list.manege_name==""}
+                        <a title="生产签字" onclick="sign_('{$list.log_id}','manege_date','manege_name')" href="javascript:void(0);" >
+                            <i class="iconfont" style="color:green">&#xe69e;</i>
+                        </a>
+                        {else}
+                        <a title="取消生产签字" onclick="signDown_('{$list.log_id}','manege_date','manege_name')" href="javascript:void(0);" >
+                            <i class="iconfont" style="color:red">&#xe69a;</i>
+                        </a>
+                        {/if}
+                        {if $list.qc_inspector==""}
+                        <a title="检验签字" onclick="sign_('{$list.log_id}','qc_inspector_date','qc_inspector')" href="javascript:void(0);" >
+                            <i class="iconfont" style="color:green">&#xe69e;</i>
+                        </a>
+                        {else}
+                        <a title="取消检验签字" onclick="signDown_('{$list.log_id}','qc_inspector_date','qc_inspector')" href="javascript:void(0);" >
+                            <i class="iconfont" style="color:red">&#xe69a;</i>
+                        </a>
+                        {/if}
+                        {if $list.other_checker==""}
+                        <a title="互检签字" onclick="sign_('{$list.log_id}','other_checker_date','other_checker')" href="javascript:void(0);" >
+                            <i class="iconfont" style="color:green">&#xe69e;</i>
+                        </a>
+                        {else}
+                        <a title="取消互检签字" onclick="signDown_('{$list.log_id}','other_checker_date','other_checker')" href="javascript:void(0);" >
+                            <i class="iconfont" style="color:red">&#xe69a;</i>
+                        </a>
+                        {/if}
+                    </td>
+                    <td>{$list.log_id}</td>
+                    <td>{$list.hr_id}</td>
+                    <td>{$list.complete_qty}</td>
+                    <td>{$list.complete_date}</td>
+                    <td>{$list.task_id}</td>
+                    <td>{$list.process_id}</td>
+                    <td>{$list.eqpmt_id}</td>
+                    <td>{$list.manege_name==""?"<a style='color:red'>未签字</a>":$list.manege_name}</td>
+                    <td>{$list.manege_date==""?"<a style='color:red'>无效</a>":$list.manege_date}</td>
+                    <td>{$list.product_qty}</td>
+                    <td>{$list.quality_grade}</td>
+                    <td>{$list.qc_inspector==""?"<a style='color:red'>未签字</a>":$list.qc_inspector}</td>
+                    <td>{$list.qc_inspector_date==""?"<a style='color:red'>无效</a>":$list.qc_inspector_date}</td>
+                    <td>{$list.other_checker==""?"<a style='color:red'>未签字</a>":$list.other_checker}</td>
+                    <td>{$list.other_checker_date==""?"<a style='color:red'>无效</a>":$list.other_checker_date}</td>
+                    <td>{$list.if_audit}</td>
+                    <td>{$list.remark}</td>
+                    <td>{$list.create_time}</td>
+                    <td>{$list.create_name}</td>
+                    <td>{$list.update_time}</td>
+                    <td>{$list.update_name}</td>
+                    {/volist}
                 </tr>
                 </tbody>
             </table>
@@ -62,7 +119,7 @@
     </div>
     <!--___________________________________-->
     <div class="page">
-        {blueprintInfo|raw}
+        {$productLog|raw}
     </div>
     <script>
         /*删除*/
@@ -80,6 +137,42 @@
                 },"json");
             });
         }
+
+        //签字
+        function sign_(where,dateKey,nameKey){
+            layer.confirm('确定要签名吗？',function(index){
+                var url = "{:url('index/ProductionRecords/sign')}";
+                var postData ={"where":where,"dateKey":dateKey,"nameKey":nameKey};
+                $.post(url,postData,function (result) {
+                    if(result){
+                        location.reload();
+                        layer.msg('已签名!',{icon:1,time:1000});
+                    }else {
+                        location.reload();
+                        layer.alert("签名失败", {icon: 5});
+                    }
+                },"json");
+            });
+        }
+        //签字
+        function signDown_(where,dateKey,nameKey){
+            layer.confirm('确定取消签名吗？',function(index){
+                var url = "{:url('index/ProductionRecords/signDown')}";
+                var postData ={"where":where,"dateKey":dateKey,"nameKey":nameKey};
+                $.post(url,postData,function (result) {
+                    if(result){
+                        location.reload();
+                        layer.msg('已取消签名!',{icon:1,time:1000});
+                    }else {
+                        location.reload();
+                        layer.alert("取消签名失败", {icon: 5});
+                    }
+                },"json");
+            });
+        }
+
+
+
         $(function () {
             $("#addLog").click(function () {
                 layer.msg('数据过多，正在加载中...', {time:6000});
