--- a/application/index/view/production_records/index.html
+++ b/application/index/view/production_records/index.html
@@ -16,7 +16,7 @@
 <div class="x-body" >
     <xblock>
         <a class="layui-btn"  target="_blank" href="{:url()}"><i class="iconfont">&#xe718;</i> 框架页面</a>
-        <button class="layui-btn" id="addLog" onclick="x_admin_show('添加生产记录','{:url(\'index/ProductionRecords/addLog\',[\'task_id\'=>$task_id])}',500,700)"><i class="layui-icon"></i>添加生产记录</button>
+        <button class="layui-btn" id="addLog" onclick="x_admin_show('添加生产记录','{:url(\'index/ProductionRecords/addLog\',[\'task_id\'=>$task_id,\'drawing\'=>$drawing])}',500,700)"><i class="layui-icon"></i>添加生产记录</button>
         <span class="x-right" style="line-height:40px">共{$productLogCount}条 · 共{$productLogCount/25|getInt}页</span>
     </xblock>
     <div class="container-wrap">
@@ -28,7 +28,7 @@
                     <!--<div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>-->
                     <!--</th>-->
                     <th>操作</th>
-                    <th>生产记录编号</th>
+                    <!--<th>生产记录编号</th>-->
                     <th>员工编号</th>
                     <th>完成数量</th>
                     <th>完成日期</th>
@@ -36,7 +36,7 @@
                     <th>工艺编号</th>
                     <th>设备编号</th>
                     <th>管理者</th>
-                    <th>合格品数量</th>
+                    <th>合格数</th>
                     <th>质量等级</th>
                     <th>检验员</th>
                     <th>互检人</th>
@@ -49,20 +49,20 @@
                 </tr>
                 </thead>
                 <tbody>
+                {volist name="$productLog" id="list"}
                 <tr>
-                    {volist name="$productLog" id="list"}
                     <td class="td-manage">
-                        <a title="修改" onclick="x_admin_show('修改 <span class=\'layui-badge layui-bg-blue\'>{$list.log_id}</span> 生产记录','{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$list.log_id])}')" href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
+                        <a title="修改" onclick="x_admin_show('修改 <span class=\'layui-badge layui-bg-blue\'>{$list.log_id}</span> 生产记录','{:url(\'index/ProductionRecords/edit\',[\'id\'=>$list.log_id,\'drawing\'=>$drawing])}')" href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
                         <a title="删除" onclick="delete_(this,'{$list.log_id}')" href="javascript:void(0);" >
                             <i  style="color:red;" class="layui-icon"></i>
                         </a>
                     </td>
-                    <td>{$list.log_id}</td>
+                    <!--<td>{$list.log_id}</td>-->
                     <td>{$list.hr_id}</td>
                     <td>{$list.complete_qty}</td>
                     <td>{$list.complete_date}</td>
                     <td>{$list.task_id}</td>
-                    <td>{$list.process_id}</td>
+                    <td>{:substr($list['process_id'],strpos($list['process_id'],'P'));}</td>
                     <td>{$list.eqpmt_id}</td>
                     <td>
                         {if $list.manege_name==""}
@@ -106,8 +106,8 @@
                     <td>{$list.create_name}</td>
                     <td>{$list.update_time}</td>
                     <td>{$list.update_name}</td>
-                    {/volist}
                 </tr>
+                {/volist}
                 </tbody>
             </table>
         </div>
@@ -120,14 +120,14 @@
         /*删除*/
         function delete_(obj,id){
             layer.confirm('确认要删除吗？',function(index){
-                var url = "<?php echo url('/index/Blueprint/delete'); ?>";
+                var url = "{:url('index/ProductionRecords/delete')}";
                 var postData ={"id":id};
                 $.post(url,postData,function (result) {
                     if(result === 1 ){
                         $(obj).parents("tr").remove();
                         layer.msg('已删除!',{icon:1,time:1000});
                     }else {
-                        layer.alert("删除失败", {icon: 5});
+                        layer.msg("删除失败", {icon:5,time:1000});
                     }
                 },"json");
             });
@@ -165,12 +165,9 @@
                 },"json");
             });
         }
-
-
-
         $(function () {
             $("#addLog").click(function () {
-                layer.msg('数据过多，正在加载中...', {time:6000});
+                layer.msg('正在加载中...', {time:500});
             })
         });
 
